[package]
name = "test_esp32s3_nostd"
version = "0.1.0"
authors = ["n-miyamoto <scotsdowneroad@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s3-hal = "0.2.0"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.2.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.3.1", features = ["esp32s3"] }

xtensa-lx-rt = { version = "0.13.0", features = ["esp32s3"], optional = true }

critical-section = { version = "1.1.1"}

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
